--- a/java/micro-service/security/src/main/resources/messages_en.properties
+++ b/java/micro-service/security/src/main/resources/messages_en.properties
@@ -94,3 +94,9 @@ org.hibernate.validator.constraints.time.DurationMin.message        = must be lo
 
 ValidEmail.email=Invalid Email
 PasswordMatches.userDto=Passwords do not match
+
+Exception.duplicate.title=Duplicate Item Found
+Exception.duplicate.username=username has been used
+Exception.duplicate.email=email has been used
+Exception.duplicate.mobile=mobile has been used
+Exception.invalid.otp=OTP code is not correct
