--- a/java/micro-service/security/src/main/resources/messages_zh_CN.properties
+++ b/java/micro-service/security/src/main/resources/messages_zh_CN.properties
@@ -83,3 +83,9 @@ org.hibernate.validator.constraints.time.DurationMin.message        = \u5fc5\u98
 
 ValidEmail.email=非法电子邮件地址
 PasswordMatches.userDto=密码输入不一致
+
+Exception.duplicate.title=发现重复数据
+Exception.duplicate.username=用户名已存在
+Exception.duplicate.email=电子邮件已存在
+Exception.duplicate.mobile=手机号已存在
+Exception.invalid.otp=输入的一次性验证码不正确
